Cleaned up notebooks.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180330 Prototyping demo.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180330 Prototyping demo.ipynb
@@ -163,9 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Trench detection"
    ]
@@ -173,9 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "diag_pos = tree()\n",
@@ -185,9 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for pos in tnrange(100):\n",
@@ -203,21 +197,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "diag = tree()\n",
-    "_ = get_trenches(root_group[\"raw\"][str(pos)][0, 1], diagnostics=diag)"
+    "zarr.array(thumbs, compressor=DEFAULT_FRAME_COMPRESSOR).info"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos = 0\n",
+    "diag = tree()\n",
+    "_ = get_trenches(root_group[\"raw\"][str(pos)][1, 30], diagnostics=diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos = 0\n",
+    "diag = tree()\n",
+    "_ = get_trenches(root_group[\"raw\"][str(pos)][1, :].mean(axis=0), diagnostics=diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "display_plot_browser(diag)"
@@ -226,9 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "diag_pos[0][\"label_1\"][\"trench_ends\"].keys()"
@@ -237,9 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "diag_trenches = {}\n",
@@ -254,9 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "frame_stream = FrameStream()\n",
@@ -268,9 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pos = 0\n",
@@ -280,9 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "img = root_group[\"raw\"][\"0\"][1, 30]"
@@ -291,9 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "display_plot_browser(diag_pos[0])"
@@ -302,9 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = diagnostics_to_dataframe(diag_pos)"
@@ -313,9 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df2 = expand_diagnostics_by_label(df)"
@@ -324,9 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df3 = drop_constant_columns(df2)"
@@ -335,9 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "qg = qshow(df3)"
@@ -346,9 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "qg"
@@ -357,9 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from holoviews.streams import Pipe\n",
@@ -369,9 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df3"
@@ -380,9 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hv.Points(df3.reset_index(), kdims=[f1, f2], vdims=[\"pos\", \"label\"])"
@@ -391,9 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "f1 = \"trench_rotation.hough_2.angle\"\n",
@@ -415,9 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def \n",
@@ -1430,9 +1409,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Trench sharpness"
    ]
@@ -1440,9 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def f(img_stack):\n",
@@ -1463,9 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def f(img_stack):\n",
@@ -1501,9 +1474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%output size=250\n",
@@ -1531,17 +1502,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "pos = 7\n",
+    "pos = 0\n",
     "show_trench_movie(\n",
     "    root_group[\"raw\"][pos],\n",
     "    trench_points_pos[pos],\n",
-    "    2,\n",
-    "    54,\n",
+    "    1,\n",
+    "    83,\n",
     "    channels=[1],\n",
     "    time_slice=slice(None, None, 3),\n",
     ")"
@@ -1556,9 +1525,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Debugging"
    ]
@@ -1566,9 +1533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# pos, trench_set_idx, trench_idx = 6, 2, 54\n",
@@ -1579,9 +1544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x_lim, y_lim = get_img_limits(root_group[\"raw\"][pos].shape[2:])\n",
@@ -1592,9 +1555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def optimize_segmentation_threshold(segmentations, diagnostics=None):\n",
@@ -1616,9 +1577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
@@ -1632,9 +1591,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_plot_browser(diag_seg_pos[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "t = 71\n",
@@ -1644,9 +1610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hv.HoloMap({t: RevImage(seg.T) for t, seg in enumerate(segs)})"
@@ -1655,9 +1619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "display_plot_browser(diag_seg_pos[1])"
@@ -1676,9 +1638,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# segs = [segment_trench(thumbs[t], diagnostics=diag_seg_pos[t]) for t in range(thumbs.shape[0])]\n",
-    "\n",
-    "\n",
     "def f(img_stack):\n",
     "    ary = np.stack(\n",
     "        [\n",
@@ -1783,6 +1742,15 @@
     "    time_slice=slice(None),\n",
     "    positions=range(1),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RevImage(trench_kymographs_yfp[0][1][54]).options(height=300, width=1200)"
    ]
   },
   {
