WIP. TIFF-ND2 correspondence.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180422 Metadata inventory analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180422 Metadata inventory analysis.ipynb
@@ -12,8 +12,7 @@
     "\n",
     "hv.extension(\"bokeh\")\n",
     "from datetime import datetime, timedelta\n",
-    "import iso8601\n",
-    "from peewee import fn"
+    "from peewee import fn, SQL"
    ]
   },
   {
@@ -27,7 +26,7 @@
     "import inventory\n",
     "from inventory import File\n",
     "import jdutil\n",
-    "import pytz"
+    "import pendulum"
    ]
   },
   {
@@ -37,15 +36,6 @@
    "outputs": [],
    "source": [
     "db = inventory.connect_db(\"data/paulsson.full.db\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nyc = pytz.timezone(\"America/New_York\")"
    ]
   },
   {
@@ -662,85 +652,119 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tiff_files = (\n",
-    "    File.select().where(File.type == \"tiff\").order_by(File.size.desc()).limit(10)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tiff_files[5].path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tiff_files[5].size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fs = (\n",
-    "    File.select()\n",
-    "    .where(File.type == \"nd2\")\n",
-    "    .where(\n",
-    "        File.path.startswith(\n",
-    "            \"/n/files/SysBio/PAULSSON LAB/SILVIA/Ti3Data/2016_05_15--PlasmidLosses\"\n",
+    "def tiff_acquisition_date(metadata):\n",
+    "    if \"image_metadata_sequence\" in metadata:\n",
+    "        acquisition_date = metadata[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\n",
+    "            \"dTimeAbsolute\"\n",
+    "        ]\n",
+    "    elif \"image_description\" in metadata:\n",
+    "        acquisition_date = pendulum.parse(\n",
+    "            metadata[\"image_description\"][\"OME\"][\"Image\"][\"AcquisitionDate\"], tz=\"local\"\n",
+    "        ).in_timezone(\"utc\")\n",
+    "    else:\n",
+    "        raise Exception(\n",
+    "            \"need image_metadata_sequence or image_description, instead found: {}\".format(\n",
+    "                metadata.keys()\n",
+    "            )\n",
     "        )\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fs[0].path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fs[0].size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "File.select(fn.)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "\n",
+    "def evaluate_tiff_nd2_correspondence(nd2_file, tiff_file):\n",
+    "    if \"image_metadata_sequence\" not in tiff_file.metadata:\n",
+    "        print(\n",
+    "            \"no TIFF image_metadata_sequence, found instead: {}\".format(\n",
+    "                tiff_file.metadata.keys()\n",
+    "            )\n",
+    "        )\n",
+    "        return\n",
+    "    if (\n",
+    "        nd2_file.metadata[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\n",
+    "            \"dTimeAbsolute\"\n",
+    "        ]\n",
+    "        == tiff_file.metadata[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\n",
+    "            \"dTimeAbsolute\"\n",
+    "        ]\n",
+    "    ):\n",
+    "        print(\"MATCH\")\n",
+    "    return\n",
+    "    if \"image_description\" not in tiff_file.metadata:\n",
+    "        print(\n",
+    "            \"no TIFF image_description, found instead: {}\".format(\n",
+    "                tiff_file.metadata.keys()\n",
+    "            )\n",
+    "        )\n",
+    "        return\n",
+    "    tiff_plane = tiff_file.metadata[\"image_description\"][\"OME\"][\"Image\"][\"Pixels\"][\n",
+    "        \"Plane\"\n",
+    "    ]\n",
+    "    print(tiff_plane)\n",
+    "    if isinstance(tiff_plane, list):\n",
+    "        tiff_plane = tiff_plane[0]\n",
+    "    tiff_x = float(tiff_plane[\"@PositionX\"])\n",
+    "    tiff_y = float(tiff_plane[\"@PositionY\"])\n",
+    "    tiff_z = float(tiff_plane[\"@PositionZ\"])\n",
+    "    tiff_dt = float(tiff_plane[\"@DeltaT\"])\n",
+    "    # print(tiff_dt)\n",
+    "    tiff_acqdate = pendulum.parse(\n",
+    "        tiff_file.metadata[\"image_description\"][\"OME\"][\"Image\"][\"AcquisitionDate\"],\n",
+    "        tz=\"local\",\n",
+    "    ).in_timezone(\"utc\")\n",
+    "    print(nd2_file.metadata[\"acquisition_time\"])\n",
+    "    # print('hhh', nd_file.metadata['image_d'])\n",
+    "    # print('IMS', nd2_file.metadata['image_metadata_sequence'])\n",
+    "    nd_timeabsolute_jd = nd2_file.metadata[\"image_metadata_sequence\"][\n",
+    "        \"SLxPictureMetadata\"\n",
+    "    ][\"dTimeAbsolute\"]\n",
+    "    if nd_timeabsolute_jd != -1:\n",
+    "        nd_timeabsolute = pendulum.instance(\n",
+    "            jdutil.jd_to_datetime(nd_timeabsolute_jd), tz=\"utc\"\n",
+    "        )\n",
+    "    else:\n",
+    "        nd_timeabsolute = None\n",
+    "    print(\"abs\", nd_timeabsolute)\n",
+    "    if (\n",
+    "        nd2_file.metadata[\"acquisition_time\"] is not None\n",
+    "        and \"variant\" in nd2_file.metadata[\"acquisition_time\"]\n",
+    "    ):\n",
+    "        nd_acqtime = pendulum.instance(\n",
+    "            jdutil.jd_to_datetime(\n",
+    "                float(\n",
+    "                    nd2_file.metadata[\"acquisition_time\"][\"variant\"][\"no_name\"][\n",
+    "                        \"@value\"\n",
+    "                    ]\n",
+    "                )\n",
+    "            ),\n",
+    "            tz=\"utc\",\n",
+    "        )\n",
+    "    else:\n",
+    "        nd_acqtime = None\n",
+    "    print(tiff_acqdate, nd_acqtime, nd_timeabsolute)\n",
+    "    # print(nd2_file.metadata['acquisition_times'][:10])\n",
+    "    atol = 0.1\n",
+    "    if nd2_file.metadata[\"x_data\"] is not None:\n",
+    "        idxs = np.where(\n",
+    "            np.logical_and(\n",
+    "                np.isclose(nd2_file.metadata[\"x_data\"], tiff_x, atol=atol),\n",
+    "                np.isclose(nd2_file.metadata[\"y_data\"], tiff_y, atol=atol),\n",
+    "                np.isclose(nd2_file.metadata[\"z_data\"], tiff_z, atol=atol),\n",
+    "            )\n",
+    "        )[0]\n",
+    "        ts = nd2_file.metadata[\"acquisition_times\"].vindex[idxs]\n",
+    "        if nd_acqtime is not None:\n",
+    "            delta_t = (tiff_acqdate - nd_acqtime).total_seconds() - ts / 1e3\n",
+    "            print(\"delta_t\", delta_t)\n",
+    "    if tiff_acqdate is not None and nd_timeabsolute is not None:\n",
+    "        print(\"delta_t2\", (tiff_acqdate - nd_timeabsolute).total_seconds())\n",
+    "    else:\n",
+    "        print(\"NO TIME DELTA\")\n",
+    "\n",
+    "\n",
     "path_sep = \"/\"\n",
     "for tiff_file in (\n",
-    "    File.select().where(File.type == \"tiff\").order_by(File.size.desc()).limit(10)\n",
+    "    File.select().where(File.type == \"tiff\").order_by(File.size.desc()).limit(9)\n",
     "):\n",
     "    print(\"looking for nd2 for tiff {}\".format(tiff_file.path))\n",
-    "    for dropped_dirs in range(1, 3):\n",
+    "    for dropped_dirs in range(1, 4):\n",
     "        path_prefix = path_sep.join(tiff_file.path.split(path_sep)[:-dropped_dirs])\n",
     "        nd2_files = File.select().where(\n",
     "            (File.type == \"nd2\") & (File.path.startswith(path_prefix))\n",
@@ -759,9 +783,354 @@
     "                )\n",
     "            )\n",
     "            break\n",
-    "    if not len(nd2_files):\n",
+    "    if len(nd2_files):\n",
+    "        print(\"&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&\")\n",
+    "        for nd2_file in nd2_files:\n",
+    "            print(\"---- ND2 FILENAME:\", nd2_file.path)\n",
+    "            print(\"---- TIFF FILENAME:\", tiff_file.path)\n",
+    "            evaluate_tiff_nd2_correspondence(nd2_file, tiff_file)\n",
+    "            print(\"==================\")\n",
+    "    else:\n",
     "        print(\"did not find nd2 for {}\".format(tiff_file.path))\n",
     "    print(\"**********\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2_file.metadata.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2_file.metadata[\"y_data\"][:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2_file.metadata[\"image_metadata_sequence\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pendulum.instance(\n",
+    "    jdutil.jd_to_datetime(\n",
+    "        nd2_file.metadata[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\n",
+    "            \"dTimeAbsolute\"\n",
+    "        ]\n",
+    "    ),\n",
+    "    tz=\"local\",\n",
+    ").in_timezone(\"utc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md_n = nd2_files[3].metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md_t = tiff_file.metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md_n.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd_acqtime = pendulum.instance(\n",
+    "    jdutil.jd_to_datetime(\n",
+    "        float(md_n[\"acquisition_time\"][\"variant\"][\"no_name\"][\"@value\"])\n",
+    "    ),\n",
+    "    tz=\"utc\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md_t[\"image_description\"][\"OME\"][\"Image\"][\"Pixels\"][\"Plane\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiff_planes = md_t[\"image_description\"][\"OME\"][\"Image\"][\"Pixels\"][\"Plane\"]\n",
+    "tiff_x = float(tiff_planes[0][\"@PositionX\"])\n",
+    "tiff_y = float(tiff_planes[0][\"@PositionY\"])\n",
+    "tiff_z = float(tiff_planes[0][\"@PositionZ\"])\n",
+    "tiff_dt = float(tiff_planes[0][\"@DeltaT\"])\n",
+    "tiff_acqdate = pendulum.parse(\n",
+    "    md_t[\"image_description\"][\"OME\"][\"Image\"][\"AcquisitionDate\"], tz=\"local\"\n",
+    ").in_timezone(\"utc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md_n[\"camera_exposure_time\"][:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md_n[\"acquisition_times\"][:100] - tiff_dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.isclose(md_n[\"x_data\"][:100], tiff_x, atol=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atol = 0.1\n",
+    "idxs = np.where(\n",
+    "    np.logical_and(\n",
+    "        np.isclose(md_n[\"x_data\"], tiff_x, atol=atol),\n",
+    "        np.isclose(md_n[\"y_data\"], tiff_y, atol=atol),\n",
+    "        np.isclose(md_n[\"z_data\"], tiff_z, atol=atol),\n",
+    "    )\n",
+    ")[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idxs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts = md_n[\"acquisition_times\"].vindex[idxs]\n",
+    "ts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiff_acqdate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd_acqtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(tiff_acqdate - nd_acqtime).total_seconds() - ts / 1e3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd_acqtime.add(seconds=ts[0] / 1e3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TIFF debugging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_tiff_nd2 = File.select().where(\n",
+    "    File.path.startswith(\n",
+    "        \"/n/files/SysBio/PAULSSON LAB/SILVIA/Ti3Data/2017_02_25--RpoSOutliers_WT_dRpoS_dSprE_dClpX\"\n",
+    "    )\n",
+    "    & (File.type == \"nd2\")\n",
+    ")\n",
+    "[f.path for f in bad_tiff_nd2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_tiffs = File.select().where(\n",
+    "    File.path.startswith(\n",
+    "        \"/n/files/SysBio/PAULSSON LAB/SILVIA/Ti3Data/2017_02_25--RpoSOutliers_WT_dRpoS_dSprE_dClpX\"\n",
+    "    )\n",
+    "    & (File.type == \"tiff\")\n",
+    ")\n",
+    "[f.path for f in bad_tiffs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_tiffs[5].metadata[\"image_metadata_sequence\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ND2 duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dups = (\n",
+    "    File.select(File.path, fn.COUNT(File.id).alias(\"c\"))\n",
+    "    .where(File.type == \"nd2\")\n",
+    "    .group_by(File.size)\n",
+    ")  # .having(SQL('count') >= 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(dups)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sizes = np.array([f.size for f in File.select(File.size).where(File.type == \"nd2\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.unique(sizes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts = Counter(sizes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for size, cts in counts.items():\n",
+    "    if cts > 1:\n",
+    "        print(\"{}: {}\".format(size, cts))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dups[0].c"
    ]
   },
   {
